--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,12 @@
   box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
+  max-width: 1440px;
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
