--- a/styles/style.css
+++ b/styles/style.css
@@ -5,12 +5,11 @@ body {
 }
 
 .header {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-padding: 92px 49px 92px 51px;
-color: #000;
-font-size: 18px;
-
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 92px 49px 92px 51px;
+  color: #000;
+  font-size: 18px;
 }
 
 .header__menu {
@@ -30,7 +29,7 @@ font-size: 18px;
   list-style: circle;
 }
 
-.header__menu-item-nomarker .header__menu-link {
+.header__menu-item_no-bullit .header__menu-link {
   text-decoration: none;
 }
 
@@ -85,6 +84,7 @@ font-size: 18px;
   flex-direction: column;
   gap: 20px;
   padding: 165px 50px 135px 50px;
+  line-height: 1;
 }
 
 .aligned-text {
@@ -98,12 +98,10 @@ font-size: 18px;
 
 .aligned-text_center {
   justify-content: center;
-  line-height: 1;
 }
 
 .aligned-text_right {
- justify-content: end;
- line-height: 1;
+  justify-content: end;
 }
 
 .letter-spacing-extended {
@@ -159,6 +157,7 @@ font-size: 18px;
 .lots__card-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 25px;
   
 }
@@ -179,32 +178,23 @@ font-size: 18px;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 100%;
   height: 100%;
   padding: 50px 40px 0 40px;
 }
 
 .card_type_film {
-  position: relative;
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  
-  background-size: 100%;
 }
 
 .card_type_book {
-  position: relative;
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  
-  background-size: 100%;
 }
 
 .card_type_picture {
-  position: relative;
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  
-  background-size: 100%;
 }
 
 .card__title {
@@ -314,7 +304,7 @@ font-size: 18px;
   text-align: center;
 }
 
-.footer__menu-item-nomarker .footer__menu-link {
+.footer__menu-item_no-bullit .footer__menu-link {
   text-align: center;
   text-decoration: none;
 }
@@ -322,9 +312,9 @@ font-size: 18px;
 .footer__social-list {
   display: flex;
   flex-direction: row;
+  align-self: start;
   justify-self: end;
   gap: 45px;
   width: 240px;
-  height: 48px;
   list-style: none;
 }
